test/conformance/chainsaw/verify-images/namespaced-credential-scope/verify-images.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: ($name)
spec:
  background: false
  rules:
  - name: check
    match:
      any:
      - resources:
          kinds:
          - Pod
    verifyImages:
    - imageReferences:
      - registry.invalid/*
      imageRegistryCredentials:
        secrets:
        - ($secret)
      attestors:
      - entries:
        - keys:
            publicKeys: '-----BEGIN PUBLIC KEY-----

              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM

              5/KAQN0/KjHcorm/J5yctVd7iEcnessRQjU917hmKO6JWVGHpDguIyakZA==

              -----END PUBLIC KEY-----'
  validationFailureAction: Enforce
